# sdl

./: README.md  build.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/cabinet/sdl/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: sdl_test.cpp
app/src/main/cpp/sdl/src/core/android/: SDL_android.c
app/src/main/java/com/cabinet/sdl/: MainActivity.java
app/src/main/java/org/libsdl/app/: SDLActivity.java  SDLAudioManager.java  SDLControllerManager.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/cabinet/sdl/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
